--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
+  border: green;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+  background-color: aqua;
 }
 
 @media (prefers-reduced-motion: no-preference) {
